--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <script>
-document.title = "About us";
+document.title = "About us";//set page title
 </script>
 
 <nav><a href="home.html" data-link>Home</a> | <a id="active" href="about.html" data-link>About us</a> | <a href="contact.html" data-link>Contact us</a></nav>
