--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <script>
-document.title = "Contact us";
+document.title = "Contact us";//set page title
 </script>
 
 <nav><a href="home.html" data-link>Home</a> | <a href="about.html" data-link>About us</a> | <a id="active" href="contact.html" data-link>Contact us</a></nav>
