--- a/home.html
+++ b/home.html
@@ -4,32 +4,41 @@ document.title = "Hompage";
 
 <nav><a id="active" href="home.html" data-link>Home</a> | <a href="about.html" data-link>About us</a> | <a href="contact.html" data-link>Contact us</a></nav>
 
-<h2>Jquery this keyword</h2>
+<h2>Welcome to SPA no hash(#) with JQuery</h2>
 
-<p>Get the data from the currently clicked element</p>
+<p>Hi guys, this is a simple and light(less than 70 lines of code as of now) Single Page Application (SPA) written in jquery that I decided to create for myself and developers that 
+just learnt javascript and jquery and want to just build a simple SPA site e.g a portfolio website that will contain pages like <b>about</b> and <b>contact</b> or any site that wants to have that native app feel without having to go through the hustle of learning heavy frameworks just to be able to do same although for the future that's the way to go.</p>
 
-<button value="BOG">Show data</button>
+<strong>Why jquery and not just vanilla js?</strong>
+<p>Jquery because it's cross browser and you write less code whiles doing more.</p>
+
+
+<strong>What popular frameworks are made for SPA?</strong>
 <br>
  <br>
-<button value="GCB">Show data</button>
+<button value="Vue" title="Double click to hide framework">Show Framework</button>
 <br>
  <br>
-<button value="SNITT">Show data</button>
+<button value="React" title="Double click to hide framework">Show Framework</button>
 <br>
  <br>
-<button value="CUSTOMS">Show data</button>
+<button value="Angular" title="Double click to hide framework">Show Framework</button>
 <br>
  <br>
 
-<p id="demo"></p>
+<p id="show_frameworks"></p>
 
 <script>
 $(document).on("click", "button", function(){
-  $("#demo").slideDown("slow");
- $("#demo").html($(this).val());
+  $("#show_frameworks").slideDown();
+ $("#show_frameworks").html($(this).val());
 
 $("button").dblclick(function(){
- $("#demo").hide();
+ $("#show_frameworks").hide();
  }); 
 });
 </script>
+
+<p>Check out a tech support website developed by me: <a href="https://www.thetecsup.com" target="_blank">thetecsup</a></p>
+
+<p>Any support or improvements on this would be much appreciated :).</p>
